# python-django-blog

./: .coveragerc  .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  ruff.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: pyci.yml
python_django_blog/: asgi.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
python_django_blog/articles/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
python_django_blog/articles/migrations/: 0001_initial.py
python_django_blog/fixtures/: articles.json  test_data.json
python_django_blog/locale/ru/LC_MESSAGES/: django.mo  django.po
python_django_blog/templates/: about.html  index.html
python_django_blog/templates/articles/: create.html  delete.html  detail.html  index.html  update.html
python_django_blog/templates/layouts/: application.html  confirm_delete.html  form.html
