[project]
name = "python-django-blog"
version = "0.1.0"
description = "A simple Django project that implements a simple blog"
authors = [{name="Hexlet Team <info@hexlet.io>"}]
license = "ISC"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.7",
    "django-bootstrap4>=25.1",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
