[project]
name = "python-django-blog"
version = "0.1.0"
description = "A simple Django project that implements a simple blog"
authors = [{name="Hexlet Team <info@hexlet.io>"}]
license = "ISC"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.5",
    "django-bootstrap4>=26.1",
    "gunicorn>=26.0.0",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
